# wgpu1

./: Cargo.toml  README.md
src/: camera.rs  lib.rs  shader.wgsl  transforms.rs  vertex_models.rs
src/shaders/: color_shader.wgsl  texture_shader.wgsl
