[package]
name = "wgpu1"
version = "0.1.0"
edition = "2021"
authors = ["Tomas Siegl <tomas.siegl@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wgpu1"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cfg-if = "1"
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
# Replace with tokio if needed by Rayon
pollster = "0.2"
bytemuck = { version = "1.9.1", features = ["derive"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.12", features = ["webgl"]}
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}